<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">TravelTrack</string>
    <string name="action_settings">Settings</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="sign_in">Sign In</string>
    <string name="day_maps">Map of the Day</string>
    <string name="day_finances">Finances</string>
    <string name="day_notes">Notes</string>

    <!--Add trip Layout-->
    <string name="trip_name">Trip Name:</string>
    <string name="name">Name</string>
    <string name="starting_date">Starting Date:</string>
    <string name="_01_02_2018">01/02/2018</string>
    <string name="ending_date">Ending Date:</string>
    <string name="_20_02_2018">20/02/2018</string>
    <string name="country">Country:</string>
    <string name="short_description">Short Description:</string>
    <string name="tell_me_something_about_this_trip">Tell me something about this trip.</string>
    <string name="save">Save</string>
    <string name="expenses_name">Expenses name</string>
    <string name="amount">Amount</string>
    <string name="expenses_amount">%1$s£</string>
    <string name="notesFABDescription">This FAB lets you add a new Note.</string>
    <string name="financesFABDescription">This FAB lets you add a new Expenses</string>
    <string name="tripFABDescription">This FAB lets you add a new Trip.</string>
    <string name="appwidget_text">Trip Title</string>
    <string name="appwidget_text2">Day Title</string>
    <string name="add_widget">Add widget</string>
    <string name="postingNote">Posting Note...</string>
    <string name="postingTrip">Posting Trip...</string>
    <string name="postingExpenses">Posting Expenses...</string>
    <string name="dbError">Error: could not fetch user.</string>
    <string name="signInFailed">Sign In Failed</string>
    <string name="signUpFailed">Sign Up Failed</string>
    <string name="image_with_a_plane_around_the_world">image with a plane around the world</string>
    <string name="Exchange">Exchange</string>
    <string name="from">from:</string>
    <string name="to">to:</string>
    <string name="gbp">GBP</string>
    <string name="eur">EUR</string>
    <string name="convert">convert</string>
    <string name="xxx">xxx</string>
    <string name="_1_00">1.00</string>
    <string name="days">Days</string>
    <string name="trips_list">Trips list</string>
    <string name="loading">Loading...</string>
    <string name="new_note">new note</string>
</resources>
