<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/base_popup_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="#fffefe"
    android:layout_marginBottom="110dp">

    <LinearLayout
        android:id="@+id/linearLayou1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/trip_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="casual"
            android:labelFor="@+id/trip_name"
            android:text="@string/trip_name"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/trip_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="casual"
            android:inputType="textPersonName"
            android:text="@string/name"
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayou2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_below="@id/linearLayou1">

        <TextView
            android:id="@+id/start_date_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="casual"
            android:labelFor="@+id/start_date"
            android:text="@string/starting_date"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="casual"
            android:inputType="date"
            android:text="@string/_01_02_2018"
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayou3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_below="@id/linearLayou2">

        <TextView
            android:id="@+id/end_date_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="casual"
            android:labelFor="@+id/end_date"
            android:text="@string/ending_date"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="casual"
            android:inputType="date"
            android:text="@string/_20_02_2018"
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayou4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_below="@id/linearLayou3">

        <TextView
            android:id="@+id/country_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="casual"
            android:labelFor="@+id/country"
            android:text="@string/country"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="casual"
            android:inputType="textPersonName"
            android:text="@string/name"
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayou5"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:layout_below="@id/linearLayou4">

        <TextView
            android:id="@+id/short_description_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.22"
            android:ems="10"
            android:fontFamily="casual"
            android:labelFor="@+id/short_description"
            android:text="@string/short_description"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/short_description"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="0.30"
            android:ems="10"
            android:fontFamily="casual"
            android:inputType="textPersonName"
            android:text="@string/tell_me_something_about_this_trip"
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/save_trip_btn"
        style="?android:attr/buttonBarStyle"
        android:background="#80B6B6B6"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayou5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:elevation="2dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/colorPrimary" />

</RelativeLayout>