<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/base_popup_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="#fffefe"
    android:layout_marginBottom="110dp">

    <LinearLayout
        android:id="@+id/linearLayou1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="5">

            <TextView
                android:id="@+id/exchange_from_label"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:ems="6"
                android:fontFamily="casual"
                android:labelFor="@+id/exchange_from_value"
                android:text="@string/from"
                android:textAlignment="viewStart"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/exchange_from_value"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:ems="10"
                android:fontFamily="casual"
                android:text="@string/eur"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/exchange_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="casual"
            android:inputType="numberDecimal"
            android:text="@string/_1_00"
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayou2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linearLayou1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="5">

            <TextView
                android:id="@+id/exchange_to_label"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:ems="6"
                android:fontFamily="casual"
                android:labelFor="@+id/exchange_to_value"
                android:text="@string/to"
                android:textAlignment="viewStart"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/exchange_to_value"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:ems="10"
                android:fontFamily="casual"
                android:text="@string/gbp"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/converted_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="casual"
            android:text="@string/xxx"
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/convert_btn"
        style="?android:attr/buttonBarStyle"
        android:background="#80B6B6B6"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayou2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:elevation="2dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/convert"
        android:textColor="@color/colorPrimary" />

</RelativeLayout>